2006-05-05  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsDbBase.py (undo, redo): Add repository map
	to the tuple of tables.

2006-05-05  Don Allingham  <don@gramps-project.org>
	* src/DateEdit.py: ManagedWindow
	* src/Editors/_EditAddress.py: new DateEdit interface
	* src/Editors/_EditLdsOrd.py: new DateEdit interface
	* src/Editors/_EditSourceRef.py: new DateEdit interface
	* src/Editors/_EditEventRef.py: new DateEdit interface
	* src/Editors/_EditMedia.py: new DateEdit interface
	* src/Editors/_EditName.py: new DateEdit interface
	* src/Editors/_EditEvent.py: new DateEdit interface
	* src/GrampsWidgets.py: new DateEdit interface
	* src/Editors/_EditFamily.py: import ChildModel

2006-05-05  Alex Roitman  <shura@gramps-project.org>
	* src/UndoHistory.py: Add new file.
	* src/ViewManager.py: undo history support.
	* src/GrampsDb/_GrampsDbBase.py (Transaction.__init__): Add
	timestamp to the transaction.
	(GrampsDbBase.redo): Update undo history window.
	(GrampsDbBase.undo): Update undo history window.
	(GrampsDbBase.transaction_commit): Update undo history window.
	(GrampsDbBase.transaction_commit): Set transaction timestamp.
	(GrampsDbBase.__init__): Define undo_history_callback.
	* src/Makefile.am (gdir_PYTHON): Ship new file.

2006-05-05  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_ReadGedcom.py: nickname changes
	* src/GrampsDb/_ReadXML.py: nickname changes
	* src/GrampsDb/_WriteGedcom.py: nickname changes
	* src/GrampsDb/_WriteXML.py: nickname changes
	* src/Editors/_EditPerson.py: nickname/call name changes
	* src/Editors/_EditName.py: nickname/call name changes
	* src/RelLib/_AttributeType.py: nickname changes
	* src/RelLib/_Name.py: call name changes
	* src/RelLib/_Person.py: nickname changes
	* src/MergePeople.py: nickname elimination

2006-05-05  Alex Roitman  <shura@gramps-project.org>
	* src/DisplayTabs/_MediaBackRefList.py: Import model.
	* src/GrampsDb/_GrampsBSDDB.py (gramps_upgrade_9): Add nickname
	upgrade.
