@@ -11667,7 +11667,6 @@ Text Beside Icons</property>
 </widget>
 
 <widget class="GtkDialog" id="date_edit">
-  <property name="visible">True</property>
   <property name="title" translatable="yes"></property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
   <property name="window_position">GTK_WIN_POS_NONE</property>
